<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/page_bg_grey"
    android:orientation="vertical" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rl_device_operation_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height_size"
        android:background="@color/title_bg_black" >

        <ImageButton
            android:id="@+id/ib_device_operation_back"
            android:layout_width="60dp"
            android:layout_height="@dimen/title_height_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_more_xml"
            android:contentDescription="@null"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/btn_title_back_selected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/device_operation"
            android:textColor="@color/orange"
            android:textSize="@dimen/title_text_size" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="100dp" >

            <Button
                android:id="@+id/btn_device_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_updown_alone"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/icon_button_right"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="@string/device_item_name"
                android:textColor="@color/title_bg_black"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_share_device"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_up"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/icon_button_right"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="@string/share_device_title"
                android:textColor="@color/title_bg_black"
                android:textSize="18dp" />
            
            <Button
                android:id="@+id/btn_set_device_bg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_updown_middle"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/icon_button_right"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="@string/set_device_bg"
                android:textColor="@color/title_bg_black"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_delete_device_bg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_down"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/icon_button_right"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="@string/delete_device_bg"
                android:textColor="@color/title_bg_black"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_delete_device"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/redbtn_selector"
                android:gravity="center_vertical|center"
                android:text="@string/delete_device"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>