<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/device_item_parent_view_bg"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp" >

    <RelativeLayout
        android:id="@+id/rl_device_bg"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:background="@drawable/device_item_bg" >
        
        <ImageView
            android:id="@+id/iv_device_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_device_play_xml"
            android:contentDescription="@null"
            android:padding="5dp"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/iv_device_net_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/icon_offline"
            android:contentDescription="@null" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_device_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@+id/rl_device_bg"
        android:background="@drawable/device_item_parent_view_bg"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_item_name"
            android:textColor="@color/light_black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_device_mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:layout_below="@+id/tv_device_name"
            android:text="@string/device_item_mac"
            android:textColor="@color/light_black"
            android:textSize="16dp" />
       <TextView
            android:id="@+id/tv_device_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:layout_below="@+id/tv_device_mac"
            android:text="@string/device_link"
            android:textColor="#9c9c9c"
            android:textSize="16dp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_device_link_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/device_not_linked_icon"
        android:contentDescription="@null" />

</RelativeLayout>